--- a/_posts/2024-09-02-理解结构变异BND在VCF中的表示.md
+++ b/_posts/2024-09-02-理解结构变异BND在VCF中的表示.md
@@ -37,9 +37,9 @@ math: true
 
 总结上述四种变异的组织方式有以下规律
 - 只要是断裂后的左边片段，那么断裂点总是出现在标识另一片段的左边，断裂的右片段同理
-- 如果两个相接的片段在断裂前分别是一左一右，那么必然是$N[CHR:POS[$ 和 $]CHR:POS]N$ 相连
-- 但是如果两个相接的片段在断裂前都是左边的话，那么必然是$N]CHR:POS]$ 和 $N]CHR:POS]$ 相连
-- 如果两个相接的片段在断裂前都是右边的话，那么必然是$[CHR:POS[N$ 和 $[CHR:POS[N$ 相连
+- 如果两个相接的片段在断裂前分别是一左一右，那么必然是$$ N[CHR:POS[ $$ 和 $$ ]CHR:POS]N $$ 相连
+- 但是如果两个相接的片段在断裂前都是左边的话，那么必然是$$ N]CHR:POS] $$ 和 $$ N]CHR:POS] $$ 相连
+- 如果两个相接的片段在断裂前都是右边的话，那么必然是$$ [CHR:POS[N $$ 和 $$ [CHR:POS[N $$ 相连
 
 
 > 下面是官方文档给的例子
