--- a/_posts/2024-11-16-IGV可视化BAM文件帮助理解结构变异.md
+++ b/_posts/2024-11-16-IGV可视化BAM文件帮助理解结构变异.md
@@ -292,7 +292,7 @@ IGV文档中没提到,这个位置的coverage应该也会上升
 ```
 
 
-### ### Translocation on the same chromosome-易位
+### Translocation on the same chromosome-易位
 ---
 
 同染色体易位: 染色体上的某一段序列，从原位置移动到该染色体的另一位置
